<resources>
    <string name="app_name">Run or Pay</string>
    <string name="action_settings">Settings</string>
    <string name="start_running">Start running</string>
    <string name="set">Set challenge</string>
    <string name="connect">Connect your band</string>
    <string name="enter_expected_distance">Enter expected distance</string>
    <string name="pulse">Pulse</string>
    <string name="current_state_of_health">Current state of health</string>
    <string name="temperature">Temperature</string>
    <string name="gsr">GSR</string>
    <string name="line">______________</string>
    <string name="check_your_health">Check your health</string>
    <string name="km">m</string>
    <string name="complete">You will have 24 hours to complete the challenge</string>
    <string name="you_have">Time left...</string>
    <string name="left_distance">Distance reached...</string>
    <string name="stop">Stop</string>
    <string name="remTile">Remove Tile</string>
</resources>
